--- a/sections/static-home-hero-banner.liquid
+++ b/sections/static-home-hero-banner.liquid
@@ -79,6 +79,79 @@
           </defs>
         </svg>
       </div>
+      <button class="db-btn--play-video"
+        type="button">
+        <svg class="svg-icon-circle-with-play db-svg"
+          width="82"
+          height="82"
+          viewBox="0 0 82 82"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <circle id="circle_01"
+            cx="41"
+            cy="41"
+            r="40"
+            fill="url(#linear_gradient_01)"
+            stroke="#B1FF29">
+          </circle>
+          <path id="path_01"
+            d="M54.3327 41.0001C54.3335 41.3483 54.2438 41.6908 54.0723 41.9943C53.9008 42.2978 53.6533 42.552 53.3539 42.732L34.7981 54.0315C34.4853 54.2222 34.127 54.3263 33.7602 54.3331C33.3934 54.3398 33.0315 54.249 32.7118 54.07C32.3951 53.8937 32.1313 53.6367 31.9475 53.3253C31.7637 53.0139 31.6665 52.6594 31.666 52.2983V29.7019C31.6665 29.3408 31.7637 28.9863 31.9475 28.6749C32.1313 28.3635 32.3951 28.1064 32.7118 27.9302C33.0315 27.7512 33.3934 27.6603 33.7602 27.6671C34.127 27.6739 34.4853 27.778 34.7981 27.9687L53.3539 39.2681C53.6533 39.4482 53.9008 39.7023 54.0723 40.0058C54.2438 40.3093 54.3335 40.6519 54.3327 41.0001Z"
+            fill="#FFFFFF">
+          </path>
+          <defs>
+            <linearGradient id="linear_gradient_01"
+              x1="41"
+              y1="-9"
+              x2="41"
+              y2="81"
+              gradientUnits="userSpaceOnUse">
+              <stop stop-color="#A3E00D"/>
+              <stop offset="1" stop-color="#7DA914"/>
+            </linearGradient>
+          </defs>
+        </svg>
+        <svg class="svg-icon-circle-with-pause db-svg"
+          width="82"
+          height="82"
+          viewBox="0 0 82 82"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <circle id="circle_01"
+            cx="41"
+            cy="41"
+            r="40"
+            fill="url(#linear_gradient_02)"
+            stroke="#B1FF29">
+          </circle>
+          <rect id="rect_01"
+            x="31.666"
+            y="26.3333"
+            width="6.66667"
+            height="26.6667"
+            rx="1"
+            fill="#FFFFFF">
+          </rect>
+          <rect id="rect_02"
+            x="43.666"
+            y="26.3333"
+            width="6.66667"
+            height="26.6667"
+            rx="1"
+            fill="#FFFFFF">
+          </rect>
+          <defs>
+            <linearGradient id="linear_gradient_02"
+              x1="41"
+              y1="-9"
+              x2="41"
+              y2="81"
+              gradientUnits="userSpaceOnUse">
+              <stop stop-color="#A3E00D"/>
+              <stop offset="1" stop-color="#7DA914"/>
+            </linearGradient>
+          </defs>
+        </svg>
+      </button>
     </div>
     <div class="db-container">
       <div class="db-row">
@@ -109,7 +182,7 @@
                 cx="41"
                 cy="41"
                 r="40"
-                fill="url(#linear_gradient_01)"
+                fill="url(#linear_gradient_03)"
                 stroke="#B1FF29">
               </circle>
               <path id="path_01"
@@ -117,7 +190,7 @@
                 fill="#FFFFFF">
               </path>
               <defs>
-                <linearGradient id="linear_gradient_01"
+                <linearGradient id="linear_gradient_03"
                   x1="41"
                   y1="-9"
                   x2="41"
@@ -138,7 +211,7 @@
                 cx="41"
                 cy="41"
                 r="40"
-                fill="url(#linear_gradient_02)"
+                fill="url(#linear_gradient_04)"
                 stroke="#B1FF29">
               </circle>
               <rect id="rect_01"
@@ -158,7 +231,7 @@
                 fill="#FFFFFF">
               </rect>
               <defs>
-                <linearGradient id="linear_gradient_02"
+                <linearGradient id="linear_gradient_04"
                   x1="41"
                   y1="-9"
                   x2="41"
