--- a/styles/db-theme/sections/static-blog-listing.scss
+++ b/styles/db-theme/sections/static-blog-listing.scss
@@ -149,7 +149,7 @@
               text-align: center;
               line-height: 1.25em;
               transition:
-                color $hover-transition-duration ease-in-out 0ms;
+                color $hover-transition-duration $transition-timing 0ms;
             }
 
             &:hover {
