--- a/styles/db-theme/pages/_page--emporium.scss
+++ b/styles/db-theme/pages/_page--emporium.scss
@@ -185,8 +185,8 @@
             overflow: auto;
             margin: 0 auto;
             transition:
-              max-width 500ms ease-in-out 0ms,
-              max-height 500ms ease-in-out 500ms;
+              max-width 500ms $transition-timing 0ms,
+              max-height 500ms $transition-timing 500ms;
 
             @media only screen and (max-width: 768px) {
               top: 55px;
@@ -202,7 +202,7 @@
                 background-color: transparent;
                 padding: 29px 33px;
                 transition:
-                  background-color $hover-transition-duration ease-in-out 0ms;
+                  background-color $hover-transition-duration $transition-timing 0ms;
                 cursor: pointer;
 
                 @media only screen and (max-width: 1440px) {
@@ -264,7 +264,7 @@
                     height: auto;
                     margin-bottom: 8px;
                     transition:
-                      color $hover-transition-duration ease-in-out 0ms;
+                      color $hover-transition-duration $transition-timing 0ms;
 
                     @media only screen and (max-width: 1080px) {
                       font-size: 19px;
@@ -394,15 +394,15 @@
             width: 100%;
             height: 100%;
             transition:
-              visibility 0ms ease-in-out 0ms,
-              opacity 0ms ease-in-out 0ms;
+              visibility 0ms $transition-timing 0ms,
+              opacity 0ms $transition-timing 0ms;
 
             &.--show {
               visibility: visible;
               opacity: 1;
               transition:
-                visibility $click-transition-duration ease-in-out 0ms,
-                opacity $click-transition-duration ease-in-out 0ms;
+                visibility $click-transition-duration $transition-timing 0ms,
+                opacity $click-transition-duration $transition-timing 0ms;
             }
           }
         }
@@ -493,7 +493,7 @@
               overflow: auto;
               padding: 50px 30px;
               transition:
-                left $click-transition-duration ease-in-out 0ms;
+                left $click-transition-duration $transition-timing 0ms;
             }
 
             > .db-inner-row {
@@ -533,7 +533,7 @@
                 border: 1px solid rgba(255, 255, 255, 0.40);
                 border-radius: 5px;
                 transition:
-                  border $hover-transition-duration ease-in-out 0ms;
+                  border $hover-transition-duration $transition-timing 0ms;
                 
                 @media only screen and (max-width: 1080px) {
                   padding: 10px 16px;
@@ -550,7 +550,7 @@
                   letter-spacing: -0.48px;
                   white-space: nowrap;
                   transition:
-                    color $hover-transition-duration ease-in-out 0ms;
+                    color $hover-transition-duration $transition-timing 0ms;
 
                   @media only screen and (max-width: 1080px) {
                     font-size: 10px;
@@ -628,7 +628,7 @@
                   .svg-icon-angle-up {
                     rotate: 180deg;
                     transition:
-                      rotate $click-transition-duration ease-in-out 0ms;
+                      rotate $click-transition-duration $transition-timing 0ms;
                   }
 
                   &.--toggle {
@@ -646,7 +646,7 @@
                 height: auto;
                 overflow: hidden;
                 transition:
-                  height $click-transition-duration ease-in-out 0ms;
+                  height $click-transition-duration $transition-timing 0ms;
 
                 @media only screen and (max-width: 1080px) {
                   gap: 8px;
@@ -816,7 +816,7 @@
                     border: 1px solid #D86FFF;
                     border-radius: 36px;
                     transition:
-                      background-color $click-transition-duration ease-in-out 0ms;
+                      background-color $click-transition-duration $transition-timing 0ms;
                     cursor: pointer;
 
                     @media only screen and (max-width: 1080px) {
@@ -993,7 +993,7 @@
                         white-space: nowrap;
                         display: block;
                         transition:
-                          color $hover-transition-duration ease-in-out 0ms;
+                          color $hover-transition-duration $transition-timing 0ms;
                         cursor: pointer;
                       }
 
@@ -1109,7 +1109,7 @@
                 position: relative;
                 opacity: 0;
                 transition:
-                  opacity 0ms ease-in-out 0ms;
+                  opacity 0ms $transition-timing 0ms;
                 cursor: pointer;
 
                 .product-top-wrap {
@@ -1174,7 +1174,7 @@
                     opacity: 1;
                     height: 60px;
                     transition:
-                      opacity $hover-transition-duration ease-in-out 0ms;
+                      opacity $hover-transition-duration $transition-timing 0ms;
 
                     @media only screen and (max-width: 768px) {
                       height: auto;
@@ -1250,7 +1250,7 @@
                     width: 100%;
                     height: 60px;
                     transition:
-                      opacity $hover-transition-duration ease-in-out 0ms;
+                      opacity $hover-transition-duration $transition-timing 0ms;
                     
                     @media only screen and (max-width: 768px) {
                       position: relative;
@@ -1273,7 +1273,7 @@
                       border-radius: 50px;
                       border: 1px solid $secondary-color;
                       transition:
-                        all $hover-transition-duration ease-in-out 0ms;
+                        all $hover-transition-duration $transition-timing 0ms;
 
                       @media only screen and (max-width: 768px) {
                         max-width: 100%;
@@ -1290,7 +1290,7 @@
                         white-space: nowrap;
                         display: block;
                         transition:
-                          all $hover-transition-duration ease-in-out 0ms;
+                          all $hover-transition-duration $transition-timing 0ms;
 
                         @media only screen and (max-width: 768px) {
                           font-size: 14px;
@@ -1368,7 +1368,7 @@
                 &.--fade-in {
                   opacity: 1;
                   transition:
-                    opacity 500ms ease-in-out 0ms;
+                    opacity 500ms $transition-timing 0ms;
                 }
 
                 &:hover {
@@ -1408,7 +1408,7 @@
               border: 1px solid rgba(255, 255, 255, 0.4);
               border-radius: 5px;
               transition:
-                border var(--hover-transition-duration) ease-in-out 0ms;
+                border var(--hover-transition-duration) $transition-timing 0ms;
 
               .label {
                 color: $white-color;
@@ -1421,7 +1421,7 @@
                 letter-spacing: -0.48px;
                 white-space: nowrap;
                 transition:
-                  color $hover-transition-duration ease-in-out 0ms;
+                  color $hover-transition-duration $transition-timing 0ms;
               }
 
               &:hover {
