--- a/styles/db-theme/sections/static-main-roadmap.scss
+++ b/styles/db-theme/sections/static-main-roadmap.scss
@@ -31,10 +31,9 @@
       display: block;
       object-position: center;
       object-fit: cover;
+      opacity: 0;
       width: 100%;
       height: 100%;
-
-      opacity: 0;
 
       &.--ds-view {
         display: block;
@@ -214,8 +213,8 @@
               padding: 0 0 4px;
               border-bottom: 1px solid $white-color;
               transition:
-                color $hover-transition-duration ease-in-out 0ms,
-                border $hover-transition-duration ease-in-out 0ms;
+                color $hover-transition-duration $transition-timing 0ms,
+                border $hover-transition-duration $transition-timing 0ms;
             }
 
             .svg-icon-envelope {
