--- a/styles/db-theme/sections/static-rock-n-roll-resurrected.scss
+++ b/styles/db-theme/sections/static-rock-n-roll-resurrected.scss
@@ -5,12 +5,31 @@
   background-size: cover;
   padding: 190px 20px 160px;
 
+  @media only screen and (max-width: 1440px) {
+    padding: 100px 20px;
+  }
+
+  @media only screen and (max-width: 1080px) {
+    padding: 80px 20px;
+  }
+
+  @media only screen and (max-width: 768px) {
+    height: 1080px;
+  }
+
   .db-container {
     .db-row {
       justify-content: flex-start;
 
+      @media only screen and (max-width: 768px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+
       .db-col {
-        width: 50%;
+        max-width: 600px;
+        width: 100%;
 
         h2 {
           color: $white-color;
@@ -21,7 +40,13 @@
           text-align: center;
           text-transform: uppercase;
           line-height: 1.15em;
+          white-space: nowrap;
           margin: 0 auto 70px;
+
+          @media only screen and (max-width: 768px) {
+            white-space: unset;
+            margin: 0 auto 40px;
+          }
         }
       }
     }
