--- a/styles/db-theme/sections/static-rock-n-roll-resurrected.scss
+++ b/styles/db-theme/sections/static-rock-n-roll-resurrected.scss
@@ -14,7 +14,8 @@
   }
 
   @media only screen and (max-width: 768px) {
-    height: 1080px;
+    background-image: url('section_static-rock-n-roll-resurrected_bg-v02-768x1165.jpg');
+    height: 1165px;
   }
 
   .db-container {
