--- a/styles/db-theme/sections/static-home-hero-banner.scss
+++ b/styles/db-theme/sections/static-home-hero-banner.scss
@@ -107,6 +107,11 @@
           min-width: 80px;
           width: 100%;
           height: auto;
+
+          @media only screen and (max-width: 1080px) {
+            max-width: 50px;
+            min-width: 50px;
+          }
         }
 
         .svg-icon-circle-with-play {
